# ClassCreatorBasic

./: CMakeLists.txt  Makefile  README.md  to_do.txt
inc/: Core.hpp  Dir.hpp  File.hpp  Parser.hpp  State.hpp  Writer.hpp
inc/Core/: Core.hpp
inc/Dir/: Dir.hpp
inc/File/: File.hpp
inc/Parser/: Parser.hpp
inc/State/: State.hpp
inc/Writer/: Writer.hpp
src/: Core.cpp  Dir.cpp  File.cpp  Parser.cpp  State.cpp  Writer.cpp  main.cpp
src/Core/: Core.cpp
src/Dir/: Dir.cpp
src/File/: File.cpp
src/Parser/: Parser.cpp
src/State/: State.cpp
src/Writer/: Writer.cpp
warning/cmakeList/: CMakeLists.txt
warning/doc/: about.txt  btw.txt  personalization.txt
warning/makefile/: Makefile
warning/tests_file/: Makefile  find_str_in_str.cpp  main.cpp
